[tool.poetry]
name = "engageme-be"
version = "0.1.0"
description = ""
authors = ["EngageMe Team <engagemefounders@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
google-cloud-firestore = "^1.6.0"
gunicorn = "^20.0.4"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.10.3"
pylint = "^2.4.4"
autopep8 = "^1.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
